--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.13.3",
     "cookie-parser": "^1.3.5",
+    "cors": "^2.7.1",
+    "errorhandler": "^1.4.2",
     "express": "^4.13.3",
     "express-jwt": "^3.0.1",
     "express-session": "^1.11.3",
@@ -20,6 +22,8 @@
     "lodash": "^3.10.1",
     "method-override": "^2.3.5",
     "mongodb": "^2.0.40",
+    "morgan": "^1.6.1",
+    "multer": "^1.0.3",
     "nodemailer": "0.7.1",
     "passport": "^0.3.0",
     "passport-http": "^0.3.0",
